v1.3 - Pending
	+ Playlist queue support (requires mpd >= 0.14)
	+ Use-configurable columns in playlist by using "|" in prefs > format (xsdnyd)
	+ Use xmms-like search filter by default when user types (no more ctrl-j)
	+ Ctrl-i shortcut to center currently playing song
	+ Use case insensitive sorting for library (holy_robot)
	+ Ignore "the" when sorting library in artist/album views (holy_robot)
	+ Better logic when sorting playlists and new "dir+file" sort option (sed)
	+ Allow saving/overwriting existing playlists and streams
	+ Hidden config options to set browser, hide column headers
	+ Update license to GNU GPLv3
	+ Bug: Fix nl.po translation causing crash
	+ Bug: Remember playlist position when adding from library
	+ Bug: Fixed tracebacks with certain encodings ????????
	+ Bug: MPD_HOST with password doesn't work on first install
	+ Bug: Fix desktop file to match current XDG standard (nigel)
	+ Bug: Search Amazon artwork using latin1 since it no longer supports utf8

v1.2.3 - August 23, 2007
	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
	+ Significantly reduced wakeups/sec according to powertop
	+ Add stream name as a formatting option
	+ Added Italian translation (Gianni Vialetto)
	+ Added Swedish translation (Daniel Nylander)
	+ Added Dutch translation (Olivier)
	+ Bug: Stupid parsing of amazon URLs, reduced success of cover art fetching
	+ Bug: Default cover remains after refetching when not using ~/.covers
	+ Bug: Czech translation incorrectly labeled Swedish
	+ Bug: Song played after a replace is first in list, even in shuffle mode
	+ Bug: Collapsed view doesn't work properly in some WMs (e.g. Fluxbox)
	+ Bug: Display 'update library' menu item even when library is empty

v1.2.2 - July 22, 2007
	+ Bug: Fix artwork fetching (Amazon gzip'ed xml returns garbage)
	+ Bug: Prevent connection error if the interface hasn't yet been run
	+ Bug: Prevent possibility of deleting image file when choosing local art file